# SourceMod-Websockets

./: .gitignore  .gitmodules  AMBuildScript  AMBuilder  CMakeLists.txt  PackageScript  README.md  configure.py
.github/workflows/: main.yml
OpenSSL/html/man1/: openssl-cmp.html  openssl-pkcs12.html  openssl.html
OpenSSL/html/man3/: CMS_add0_cert.html  CMS_verify.html  DH_new_by_nid.html  EVP_DigestSignInit.html  EVP_DigestVerifyInit.html  EVP_EncryptInit.html  OPENSSL_LH_COMPFUNC.html  OSSL_HTTP_REQ_CTX.html  OSSL_HTTP_transfer.html
OpenSSL/html/man7/: EVP_PKEY-EC.html  migration_guide.html
OpenSSL/include/openssl/: bio.h  configuration.h  pkcs7.h  x509.h  x509v3.h
OpenSSL/lib/: libapps.lib  libcrypto.lib  libssl.lib  libtestutil.lib
boost_1_73_0/stage/lib/win32/: libboost_chrono-vc142-mt-s-x32-1_73.lib  libboost_date_time-vc142-mt-s-x32-1_73.lib  libboost_system-vc142-mt-s-x32-1_73.lib  libboost_thread-vc142-mt-s-x32-1_73.lib
boost_1_78_0/stage/lib/win32/: libboost_chrono-vc143-mt-s-x32-1_78.lib  libboost_date_time-vc143-mt-s-x32-1_78.lib  libboost_regex-vc143-mt-s-x32-1_78.lib  libboost_serialization-vc143-mt-s-x32-1_78.lib  libboost_system-vc143-mt-s-x32-1_78.lib  libboost_thread-vc143-mt-s-x32-1_78.lib  libboost_wserialization-vc143-mt-s-x32-1_78.lib
boost_1_78_0/stage/lib/win32/cmake/boost_atomic-1.78.0/: boost_atomic-config.cmake  libboost_atomic-variant-vc143-mt-gd-x32-1_78-shared.cmake  libboost_atomic-variant-vc143-mt-gd-x32-1_78-static.cmake  (+4 more)
include/: websocket.inc
include/websocket/: json.inc  ws.inc
jansson/src/: AMBuilder
src/: event_loop.cpp  event_loop.hpp  extension.cpp  extension.hpp  json_natives.cpp  smn_websocket.cpp  smsdk_config.h  websocket_connection.cpp  websocket_connection_base.hpp  websocket_connection_ssl.cpp  websocket_connection_ssl.hpp
(+279 files in other folders)
